--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "hemera-joi": "^6.0.1",
     "inert": "^5.1.3",
     "joi": "^14.3.1",
-    "mysql": "^2.17.1",
+    "mysql2": "^1.6.5",
     "nats": "^1.2.10",
     "nats-hemera": "^7.0.1",
     "pino": "^5.12.2",
     "pino-pretty": "^2.6.0",
     "ramda": "^0.26.1",
+    "uuid": "^3.3.2",
     "vision": "^5.4.4"
   },
   "devDependencies": {
@@ -43,6 +44,18 @@
     "cucumber": "^4.2.1",
     "cucumber-pretty": "^1.4.1",
     "ts-node": "^5.0.1",
-    "typescript": "^2.8.1"
+    "typescript": "^2.8.1",
+    "browser-sync": "^2.24.4",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-clean-css": "^3.9.4",
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-notify": "^3.2.0",
+    "gulp-rename": "^1.2.3",
+    "gulp-rsync": "0.0.8",
+    "gulp-sass": "^4.0.1",
+    "gulp-uglify": "^3.0.0",
+    "gulp-util": "^3.0.8"
   }
 }
