--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hemera-joi": "^6.0.1",
     "inert": "^5.1.3",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^1.6.5",
     "nats": "^1.2.10",
     "nats-hemera": "^7.0.1",
