--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ts-node server.ts"
-  },
+    "start": "nodemon --exec ts-node server.ts",
+    "fill:db": "ts-node ./database/fillDataBaseMysql.ts"
+   },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "inert": "^5.1.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose-explain": "^0.2.2",
     "mysql2": "^1.6.5",
     "nats": "^1.2.10",
     "nats-hemera": "^7.0.1",
