--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ts-node server.ts",
+    "start": "nodemon --exec ts-node server.ts ",
     "fill:db": "ts-node ./database/fillDataBaseMysql.ts"
-   },
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,11 +19,9 @@
     "hapi": "^18.1.0",
     "hapi-auth-bearer-token": "^6.1.1",
     "hapi-swagger": "^9.4.2",
-    "hemera-joi": "^6.0.1",
     "inert": "^5.1.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose-explain": "^0.2.2",
     "mysql2": "^1.6.5",
     "nats": "^1.2.10",
     "nats-hemera": "^7.0.1",
@@ -42,23 +40,21 @@
     "@types/nats-hemera": "^2.0.0",
     "@types/node": "^11.13.6",
     "@types/pino": "^4.7.1",
-    "mongoose": "^4.12.4",
-    "chai": "^4.1.2",
-    "cucumber": "^4.2.1",
-    "cucumber-pretty": "^1.4.1",
-    "ts-node": "^5.0.1",
-    "typescript": "^2.8.1",
     "browser-sync": "^2.24.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-clean-css": "^3.9.4",
+    "gulp-compile-handlebars": "^0.6.1",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^5.0.3",
     "gulp-notify": "^3.2.0",
-    "gulp-rename": "^1.2.3",
+    "gulp-rename": "^1.4.0",
     "gulp-rsync": "0.0.8",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.8"
+    "gulp-util": "^3.0.8",
+    "mongoose": "^4.12.4",
+    "ts-node": "^5.0.1",
+    "typescript": "^2.8.1"
   }
 }
