--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "bluebird": "^3.5.4",
     "boom": "^7.3.0",
     "faker": "^4.1.0",
     "handlebars": "^4.1.2",
@@ -22,12 +23,14 @@
     "inert": "^5.1.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "kue": "^0.11.6",
     "mysql2": "^1.6.5",
     "nats": "^1.2.10",
     "nats-hemera": "^7.0.1",
     "pino": "^5.12.2",
     "pino-pretty": "^2.6.0",
     "ramda": "^0.26.1",
+    "sleep": "^6.1.0",
     "uuid": "^3.3.2",
     "vision": "^5.4.4"
   },
