--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "&& nodemon --exec ts-node server.ts",
+    "start": "nodemon --exec ts-node server.ts",
     "fill:db": "ts-node ./database/fillDataBaseMysql.ts",
     "docker": "docker-compose up -d"
   },
@@ -13,39 +13,30 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "bluebird": "^3.5.4",
     "boom": "^7.3.0",
     "faker": "^4.1.0",
     "handlebars": "^4.1.2",
     "hapi": "^18.1.0",
     "hapi-auth-bearer-token": "^6.1.1",
-    "hapi-swagger": "^9.4.2",
+    "hapi-swagger": "^10.0.2",
     "inert": "^5.1.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "kue": "^0.11.6",
-    "mysql2": "^1.6.5",
-    "nats": "^1.2.10",
     "nats-hemera": "^7.0.1",
     "pino": "^5.12.2",
     "pino-pretty": "^2.6.0",
-    "ramda": "^0.26.1",
-    "sleep": "^6.1.0",
-    "uuid": "^3.3.2",
     "vision": "^5.4.4"
   },
   "devDependencies": {
     "@types/boom": "^7.2.1",
-    "@types/chai": "^4.1.2",
-    "@types/cucumber": "^4.0.1",
     "@types/hapi": "^17.0.9",
     "@types/joi": "^13.6.3",
-    "@types/nats-hemera": "^2.0.0",
     "@types/node": "^11.13.6",
     "@types/pino": "^4.7.1",
-    "browser-sync": "^2.24.4",
     "gulp": "^3.9.1",
+    "browser-sync": "^2.26.7",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-clean-css": "^3.9.4",
     "gulp-compile-handlebars": "^0.6.1",
@@ -55,7 +46,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-rsync": "0.0.8",
     "gulp-sass": "^4.0.1",
-    "gulp-uglify": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
     "mongoose": "^4.12.4",
     "ts-node": "^5.0.1",
