--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "my-software",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec ts-node server.ts",
+    "start": "nodemon --exec  ts-node server.ts",
     "fill:db": "ts-node ./database/fillDataBaseMysql.ts",
     "docker": "docker-compose up -d"
   },
@@ -16,6 +15,7 @@
     "axios": "^0.19.0",
     "bluebird": "^3.5.4",
     "boom": "^7.3.0",
+    "cyrillic-to-translit-js": "^2.2.0",
     "faker": "^4.1.0",
     "handlebars": "^4.1.2",
     "hapi": "^18.1.0",
@@ -24,6 +24,8 @@
     "inert": "^5.1.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.6.8",
     "nats-hemera": "^7.0.1",
     "pino": "^5.12.2",
     "pino-pretty": "^2.6.0",
@@ -33,10 +35,11 @@
     "@types/boom": "^7.2.1",
     "@types/hapi": "^17.0.9",
     "@types/joi": "^13.6.3",
+    "@types/mongoose": "^5.5.11",
     "@types/node": "^11.13.6",
     "@types/pino": "^4.7.1",
-    "gulp": "^3.9.1",
     "browser-sync": "^2.26.7",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-clean-css": "^3.9.4",
     "gulp-compile-handlebars": "^0.6.1",
@@ -48,7 +51,6 @@
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
-    "mongoose": "^4.12.4",
     "ts-node": "^5.0.1",
     "typescript": "^2.8.1"
   }
