--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "my-software",
   "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "description": "Spiritual evolution platform",
+  "main": "server.js",
   "scripts": {
-    "start": "nohup env PORT=80 && nodemon --exec ts-node server.ts",
+    "deploy": "env PORT=80 && pm2 start ts-node server.ts",
+    "start": "pm2 start ts-node server.ts",
     "docker": "docker-compose up -d"
   },
   "keywords": [],
-  "author": "",
+  "author": "Dmitriy Zorin",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
