--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "deploy": "export PORT=80 && pm2 start ts-node server.ts",
-    "start": "pm2 start ts-node server.ts",
+    "start": "pm2 start ts-node server.ts --watch",
     "docker": "docker-compose up -d"
   },
   "keywords": [],
@@ -19,7 +19,9 @@
     "faker": "^4.1.0",
     "handlebars": "^4.1.2",
     "hapi": "^18.1.0",
+    "hapi-auth-basic": "^5.0.0",
     "hapi-auth-bearer-token": "^6.1.1",
+    "hapi-auth-jwt2": "^8.6.1",
     "hapi-swagger": "^10.0.2",
     "inert": "^5.1.3",
     "joi": "^14.3.1",
