--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/mongoose": "^5.5.11",
     "@types/node": "^11.13.6",
     "@types/pino": "^4.7.1",
+    "@types/redis": "^2.8.13",
     "browser-sync": "^2.26.7",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
