--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "Dmitriy Zorin",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^8.0.1",
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
     "bluebird": "^3.5.4",
     "boom": "^7.3.0",
     "cyrillic-to-translit-js": "^2.2.0",
