--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/boom": "^8.0.1",
+    "async-redis": "^1.1.7",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
-    "bluebird": "^3.5.4",
+    "bluebird": "^3.7.1",
     "boom": "^7.3.0",
     "cyrillic-to-translit-js": "^2.2.0",
     "faker": "^4.1.0",
@@ -34,6 +35,7 @@
     "pino": "^5.12.2",
     "pino-pretty": "^2.6.0",
     "redis": "^2.8.0",
+    "tarantool-driver": "^3.0.6",
     "vision": "^5.4.4"
   },
   "devDependencies": {
@@ -43,7 +45,8 @@
     "@types/mongoose": "^5.5.11",
     "@types/node": "^11.13.6",
     "@types/pino": "^4.7.1",
-    "@types/redis": "^2.8.13",
+    "@types/redis": "^2.8.14",
+    "@types/tarantool-driver": "^3.0.0",
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^5.0.0",
