--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "my-app",
+  "name": "admin-panel-ts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@babel/core": "7.6.0",
-    "@material-ui/core": "^4.5.1",
-    "@material-ui/icons": "^4.5.1",
     "@svgr/webpack": "4.3.2",
+    "@types/jest": "24.0.21",
+    "@types/node": "12.12.5",
+    "@types/react": "16.9.11",
+    "@types/react-dom": "16.9.3",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
     "babel-eslint": "10.0.3",
@@ -36,7 +38,6 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
-    "jsonwebtoken": "^8.5.1",
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
@@ -45,17 +46,20 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.10.2",
+    "react": "^16.11.0",
     "react-app-polyfill": "^1.0.4",
     "react-dev-utils": "^9.1.0",
-    "react-dom": "^16.10.2",
+    "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
+    "react-router-modal": "^1.5.2",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
+    "sass-loader": "7.2.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
+    "typescript": "3.6.4",
     "url-loader": "2.1.0",
     "webpack": "4.41.0",
     "webpack-dev-server": "3.2.1",
@@ -134,9 +138,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "devDependencies": {
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.2.0"
   }
 }
