--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
 version: '2'
 services:
-  # mongo:
-  #   image: mongo:3.6.4
-  #   stdin_open: true
-  #   tty: true
-  #   ports:
-  #     - 27017:27017/tcp
+  mongo:
+    image: mongo:3.6.4
+    stdin_open: true
+    tty: true
+    ports:
+      - 27017:27017/tcp
   redis:
     image: 'bitnami/redis:4.0'
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - '6380:6380'
