--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "prod": "export PORT=80 && pm2 start eco/ecosystem-prod.config.js && pm2 logs",
     "dev": "pm2 start eco/ecosystem-dev.config.js && pm2 logs",
-    "docker": "docker-compose up -d"
+    "docker": "docker-compose up -d",
+    "rebuild": "pm2 delete all && git pull && npm run dev"
   },
   "keywords": [],
   "author": "Dmitriy Zorin",
