--- a/package.json
+++ b/package.json
@@ -27,17 +27,20 @@
     "hapi-auth-bearer-token": "^6.1.1",
     "hapi-auth-jwt2": "^8.6.1",
     "hapi-swagger": "^10.0.2",
+    "https-proxy-agent": "^4.0.0",
     "inert": "^5.1.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.6.8",
     "nats-hemera": "^7.0.1",
+    "node-telegram-bot-api": "^0.40.0",
     "pg": "^7.12.1",
     "pino": "^5.12.2",
     "pino-pretty": "^3.3.0",
     "redis": "^2.8.0",
     "tarantool-driver": "^3.0.6",
+    "telegraf": "^3.34.1",
     "vision": "^5.4.4"
   },
   "devDependencies": {
