--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "author": "Dmitriy Zorin",
   "license": "ISC",
   "dependencies": {
-    "@hapi/boom": "^8.0.1",
     "async-redis": "^1.1.7",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
@@ -32,7 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.6.8",
-    "nats-hemera": "^7.0.1",
+    "node-fetch": "^2.6.0",
     "node-telegram-bot-api": "^0.40.0",
     "pg": "^7.12.1",
     "pino": "^5.12.2",
@@ -43,6 +42,7 @@
     "vision": "^5.4.4"
   },
   "devDependencies": {
+    "@hapi/boom": "^8.0.1",
     "@types/boom": "^7.3.0",
     "@types/hapi": "^17.0.9",
     "@types/joi": "^13.6.3",
