--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bluebird": "^3.7.1",
     "boom": "^7.3.0",
     "cyrillic-to-translit-js": "^2.2.0",
+    "dropbox-v2-api": "^2.4.11",
     "faker": "^4.1.0",
     "gulp-terser": "^1.2.0",
     "handlebars": "^4.1.2",
@@ -27,6 +28,7 @@
     "hapi-auth-bearer-token": "^6.1.1",
     "hapi-auth-jwt2": "^8.6.1",
     "hapi-swagger": "^10.0.2",
+    "http-proxy-agent": "^3.0.0",
     "inert": "^5.1.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
@@ -36,7 +38,10 @@
     "pg": "^7.12.1",
     "pino": "^5.12.2",
     "pino-pretty": "^3.3.0",
+    "proxy-agent": "^3.1.1",
     "redis": "^2.8.0",
+    "request": "^2.88.0",
+    "socks-proxy-agent": "^4.0.2",
     "tarantool-driver": "^3.0.6",
     "telegraf": "^3.34.1",
     "uglify-es": "^3.3.9",
