--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Spiritual evolution platform",
   "main": "server.js",
   "scripts": {
-    "prod": "export PORT=80 && pm2 start eco/ecosystem-prod.config.js && pm2 logs",
+    "prod": "pm2 start eco/ecosystem-prod.config.js && pm2 logs",
     "dev": "pm2 start eco/ecosystem-dev.config.js && pm2 logs",
     "docker": "docker-compose up -d",
     "rebuild": "pm2 delete all && git pull && npm run dev"
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.6.8",
+    "node-schedule": "^1.3.2",
     "node-telegram-bot-api": "^0.40.0",
     "pg": "^7.12.1",
     "pino": "^5.12.2",
