--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^5.6.8",
     "node-schedule": "^1.3.2",
     "node-telegram-bot-api": "^0.40.0",
+    "nodemailer": "^6.4.2",
     "pg": "^7.12.1",
     "pino": "^5.12.2",
     "pino-pretty": "^3.3.0",
