--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build && npm run replace-path && npm run copy-files",
     "lint": "vue-cli-service lint",
     "replace-path": "sh ./replace.sh",
