--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Dmitriy Zorin",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^24.9.1",
     "async-redis": "^1.1.7",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
@@ -21,14 +22,12 @@
     "cyrillic-to-translit-js": "^2.2.0",
     "dropbox-v2-api": "^2.4.11",
     "faker": "^4.1.0",
-    "gulp-terser": "^1.2.0",
     "handlebars": "^4.1.2",
     "hapi": "^18.1.0",
     "hapi-auth-basic": "^5.0.0",
     "hapi-auth-bearer-token": "^6.1.1",
     "hapi-auth-jwt2": "^8.6.1",
     "hapi-swagger": "^10.0.2",
-    "http-proxy-agent": "^3.0.0",
     "inert": "^5.1.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
@@ -37,16 +36,16 @@
     "node-schedule": "^1.3.2",
     "node-telegram-bot-api": "^0.40.0",
     "nodemailer": "^6.4.2",
-    "pg": "^7.12.1",
+    "pg": "^7.17.1",
+    "pg-hstore": "^2.3.3",
     "pino": "^5.12.2",
     "pino-pretty": "^3.3.0",
-    "proxy-agent": "^3.1.1",
     "redis": "^2.8.0",
     "request": "^2.88.0",
+    "sequelize": "^5.21.3",
     "socks-proxy-agent": "^4.0.2",
     "tarantool-driver": "^3.0.6",
     "telegraf": "^3.34.1",
-    "uglify-es": "^3.3.9",
     "vision": "^5.4.4"
   },
   "devDependencies": {
@@ -70,9 +69,11 @@
     "gulp-notify": "^3.2.0",
     "gulp-rename": "^1.4.0",
     "gulp-rsync": "0.0.8",
+    "gulp-terser": "^1.2.0",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
+    "uglify-es": "^3.3.9",
     "ts-node": "^5.0.1",
     "typescript": "^3.6.4"
   }
