--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-software",
+  "name": "spiritual-evolution",
   "version": "0.0.1",
   "description": "Spiritual evolution platform",
   "main": "server.js",
@@ -7,13 +7,14 @@
     "prod": "pm2 start eco/ecosystem-prod.config.js && pm2 logs",
     "dev": "pm2 start eco/ecosystem-dev.config.js && pm2 logs",
     "docker": "docker-compose up -d",
-    "rebuild": "pm2 delete all && git pull && npm run dev"
+    "rebuild": "pm2 delete all && git pull && npm run dev",
+    "test": "jest -i --forceExit",
+    "test:watch": "jest -i --coverage --watchAll"
   },
   "keywords": [],
   "author": "Dmitriy Zorin",
   "license": "ISC",
   "dependencies": {
-    "@types/jest": "^24.9.1",
     "async-redis": "^1.1.7",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
@@ -29,6 +30,7 @@
     "hapi-auth-jwt2": "^8.6.1",
     "hapi-swagger": "^10.0.2",
     "inert": "^5.1.3",
+    "jest": "^25.1.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
@@ -52,6 +54,7 @@
     "@hapi/boom": "^8.0.1",
     "@types/boom": "^7.3.0",
     "@types/hapi": "^17.0.9",
+    "@types/jest": "^24.9.1",
     "@types/joi": "^13.6.3",
     "@types/mongoose": "^5.5.11",
     "@types/node": "^11.13.6",
@@ -69,12 +72,20 @@
     "gulp-notify": "^3.2.0",
     "gulp-rename": "^1.4.0",
     "gulp-rsync": "0.0.8",
-    "gulp-terser": "^1.2.0",
     "gulp-sass": "^4.0.1",
+    "gulp-terser": "^1.2.0",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
-    "uglify-es": "^3.3.9",
+    "ts-jest": "^25.0.0",
     "ts-node": "^5.0.1",
-    "typescript": "^3.6.4"
+    "typescript": "^3.6.4",
+    "uglify-es": "^3.3.9"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "collectCoverageFrom": [
+      "controllers/**/**/*.{ts}"
+    ]
   }
 }
