--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "Dmitriy Zorin",
   "license": "ISC",
   "dependencies": {
+    "@types/pg": "^7.14.3",
+    "@types/sequelize": "^4.28.8",
     "async-redis": "^1.1.7",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
