--- a/package.json
+++ b/package.json
@@ -15,12 +15,9 @@
   "author": "Dmitriy Zorin",
   "license": "ISC",
   "dependencies": {
-    "@types/pg": "^7.14.3",
-    "@types/sequelize": "^4.28.8",
     "async-redis": "^1.1.7",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
-    "bluebird": "^3.7.1",
     "boom": "^7.3.0",
     "cyrillic-to-translit-js": "^2.2.0",
     "dropbox-v2-api": "^2.4.11",
@@ -35,24 +32,24 @@
     "jest": "^25.1.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.6.8",
     "node-schedule": "^1.3.2",
     "node-telegram-bot-api": "^0.40.0",
     "nodemailer": "^6.4.2",
-    "pg": "^7.17.1",
-    "pg-hstore": "^2.3.3",
+    "pg": "^8.2.1",
     "pino": "^5.12.2",
     "pino-pretty": "^3.3.0",
     "redis": "^2.8.0",
     "request": "^2.88.0",
-    "sequelize": "^5.21.3",
     "socks-proxy-agent": "^4.0.2",
     "tarantool-driver": "^3.0.6",
     "telegraf": "^3.34.1",
     "vision": "^5.4.4"
   },
   "devDependencies": {
+    "@types/pg": "^7.14.3",
     "@hapi/boom": "^8.0.1",
     "@types/boom": "^7.3.0",
     "@types/hapi": "^17.0.9",
