--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,5 +22,10 @@ services:
   #     - RABBITMQ_DEFAULT_PASS=password
   postgresql:
     image: postgres
+    restart: always
+    environment:
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 1234
     ports:
       - '5432:5432'
