--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build && npm run replace-path && npm run copy-files",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "start": "npm run dev",
+    "build": "node build/build.js",
     "lint": "vue-cli-service lint",
     "replace-path": "sh ./replace.sh",
     "copy-files": "cp -r dist/* ../static/vue"
@@ -15,6 +16,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "axios": "^0.19.1",
     "core-js": "^3.4.4",
+    "extract-text-webpack-plugin": "^3.0.2",
     "vue": "^2.6.10",
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.1.3",
@@ -32,12 +34,15 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "prettier": "^1.19.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "^2.0.3",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.3.0",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
   },
   "eslintConfig": {
     "root": true,
