--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Spiritual evolution platform",
   "main": "server.js",
   "scripts": {
-    "prod": "pm2 start eco/ecosystem-prod.config.js && pm2 logs",
+    "prod": "knex migrate:latest && pm2 start eco/ecosystem-prod.config.js && pm2 logs",
     "dev": "pm2 start eco/ecosystem-dev.config.js && pm2 logs",
     "docker": "docker-compose up -d",
     "rebuild": "pm2 delete all && git pull && npm run dev",
