--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -14,10 +14,11 @@
   "dependencies": {
     "axios": "^0.20.0",
     "vue": "^2.5.2",
+    "vue-js-modal": "^2.0.0-rc.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
-    "sass": "^1.26.10",
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -43,6 +44,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass": "^1.26.10",
     "sass-loader": "^7.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
