--- a/admin-panel/.prettierrc
+++ b/admin-panel/.prettierrc
@@ -1,5 +1,5 @@
 {
-  "tabWidth": 2,
-  "singleQuote": false,
-  "printWidth": 120
+  "singleQuote": true,
+  "semi": false,
+  "jsxBracketSameLine": true
 }
