add popUp for materials

--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -61,7 +61,9 @@
     "react-redux": "5.1.2",
     "react-router": "4.4.0-beta.8",
     "react-router-dom": "4.4.0-beta.8",
+    "react-select": "^3.1.0",
     "redux": "4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "2.3.0",
     "resolve": "1.10.0",
     "sanitize.css": "11.0.1",
