--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -41,11 +41,14 @@
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
+    "interactjs": "^1.10.0",
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.2",
     "jest-resolve": "23.6.0",
     "jest-watch-typeahead": "^0.2.1",
+    "lodash": "^4.17.20",
     "mini-css-extract-plugin": "0.5.0",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
@@ -55,6 +58,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "16.14.0",
     "react-app-polyfill": "^0.2.2",
+    "react-calendar-timeline": "^0.27.0",
     "react-dev-utils": "^8.0.0",
     "react-dom": "16.14.0",
     "react-modal": "^3.11.2",
