--- a/admin-panel/package.json
+++ b/admin-panel/package.json
@@ -26,7 +26,7 @@
     "babel-preset-react-app": "^7.0.2",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "connected-react-router": "4.5.0",
+    "connected-react-router": "^6.8.0",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
@@ -41,7 +41,6 @@
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
-    "interactjs": "^1.10.0",
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.2",
     "jest-resolve": "23.6.0",
@@ -62,9 +61,8 @@
     "react-dev-utils": "^8.0.0",
     "react-dom": "16.14.0",
     "react-modal": "^3.11.2",
-    "react-redux": "5.1.2",
-    "react-router": "4.4.0-beta.8",
-    "react-router-dom": "4.4.0-beta.8",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-select": "^3.1.0",
     "redux": "4.0.5",
     "redux-devtools-extension": "^2.13.8",
