--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "lodash": "^4.17.15",
+    "mongoose": "^5.10.13",
     "node-telegram-bot-api": "^0.40.0",
     "nodemailer": "^6.4.2",
     "pg": "^8.2.1",
@@ -59,6 +60,8 @@
     "@types/redis": "^2.8.14",
     "@types/tarantool-driver": "^3.0.0",
     "browser-sync": "^2.26.7",
+    "eslint": "^7.13.0",
+    "eslint-plugin-react": "^7.21.5",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-clean-css": "^3.9.4",
