--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "pg": "^8.2.1",
     "pino": "^5.12.2",
     "pino-pretty": "^3.3.0",
+    "puregram": "^2.0.4-rc.4",
     "redis": "^2.8.0",
     "socks-proxy-agent": "^4.0.2",
     "telegraf": "^3.34.1",
